--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-spring.application.name=task_manager
+spring.application.name=taskmanagement
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/task_manager
-spring.datasource.username=dm
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update  #create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.data.mongodb.uri=mongodb://localhost:27017/task_manager
