--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
 spring.application.name=taskmanagement
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.data.mongodb.uri=mongodb://localhost:27017/task_manager
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/task_manager
+spring.profiles.active=dev
